# ligra

./: CMakeLists.txt
apps/demo/: CMakeLists.txt
apps/eccentricity/: CMakeLists.txt
apps/localAlg/: CMakeLists.txt
apps/tutorial/: CMakeLists.txt
utils/: CMakeLists.txt
